added display_field_copy module

--- a/config/default/core.entity_view_display.node.heritage_item.full.yml
+++ b/config/default/core.entity_view_display.node.heritage_item.full.yml
@@ -104,6 +104,7 @@ third_party_settings:
         - links
         - content_moderation_control
         - field_item_type
+        - 'display_field_copy:node-images_clone'
         - field_image2
         - field_description_summary
         - field_description_source
@@ -156,6 +157,42 @@ third_party_settings:
         - field_local_origin_tid
         - field_geolocation
     fields:
+      'display_field_copy:node-images_clone':
+        plugin_id: 'display_field_copy:node-images_clone'
+        weight: 4
+        label: hidden
+        formatter: responsive_image
+        settings:
+          formatter:
+            responsive_image_style: d01_square
+            image_link: ''
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            lbw: false
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            lb-col: false
+            ow: false
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-el: ''
+            fis-cl: hidden
+            fis-at: ''
+            fis-def-at: true
+            fi: true
+            fi-el: ''
+            fi-cl: hidden
+            fi-at: ''
+            fi-def-at: false
+            prefix: '<img src=[node:field_image2:0:d06] alt="top image">'
+            suffix: ''
       node_title:
         plugin_id: node_title
         weight: 0
@@ -231,7 +268,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 7
+    weight: 8
     region: main
   field_access_rationale:
     type: advanced_text
@@ -290,7 +327,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 9
+    weight: 10
     region: main
   field_acquired_from:
     type: basic_string
@@ -325,7 +362,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 16
+    weight: 17
     region: main
   field_associated_ceremonial_time:
     type: entity_reference_label
@@ -361,7 +398,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 19
+    weight: 20
     region: main
   field_bibliographic_citation:
     type: advanced_text
@@ -420,7 +457,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 10
+    weight: 11
     region: main
   field_catalog_id:
     type: string
@@ -456,7 +493,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 14
+    weight: 15
     region: main
   field_collection:
     type: entity_reference_label
@@ -492,7 +529,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 13
+    weight: 14
     region: main
   field_contributor_collector:
     type: entity_reference_label
@@ -529,7 +566,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 11
+    weight: 12
     region: main
   field_current_institution:
     type: entity_reference_label
@@ -565,7 +602,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 12
+    weight: 13
     region: main
   field_date_acquisition:
     type: string
@@ -601,7 +638,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 17
+    weight: 18
     region: main
   field_date_attribution:
     type: advanced_text
@@ -660,7 +697,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 22
+    weight: 23
     region: main
   field_date_collection:
     type: string
@@ -696,7 +733,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 20
+    weight: 21
     region: main
   field_date_made:
     type: string
@@ -732,7 +769,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 21
+    weight: 22
     region: main
   field_description_condition:
     type: basic_string
@@ -767,7 +804,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 24
+    weight: 25
     region: main
   field_description_howtocite:
     type: advanced_text
@@ -826,7 +863,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 51
+    weight: 52
     region: main
   field_description_materials:
     type: advanced_text
@@ -885,7 +922,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 25
+    weight: 26
     region: main
   field_description_motifs:
     type: advanced_text
@@ -944,7 +981,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 26
+    weight: 27
     region: main
   field_description_othernotes:
     type: advanced_text
@@ -1003,7 +1040,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 27
+    weight: 28
     region: main
   field_description_source:
     type: basic_string
@@ -1038,7 +1075,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 6
+    weight: 7
     region: main
   field_description_summary:
     type: text_default
@@ -1073,7 +1110,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 5
+    weight: 6
     region: main
   field_description_symbols:
     type: advanced_text
@@ -1132,7 +1169,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 28
+    weight: 29
     region: main
   field_description_techniques:
     type: advanced_text
@@ -1191,7 +1228,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 29
+    weight: 30
     region: main
   field_dimensions:
     type: physical_dimensions_default
@@ -1226,7 +1263,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 39
+    weight: 40
     region: main
   field_exhibition_notes:
     type: advanced_text
@@ -1285,7 +1322,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 30
+    weight: 31
     region: main
   field_folders:
     type: entity_reference_label
@@ -1322,7 +1359,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 31
+    weight: 32
     region: main
   field_function_attribution:
     type: advanced_text
@@ -1381,7 +1418,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 32
+    weight: 33
     region: main
   field_geolocation:
     type: geolocation_map
@@ -1986,7 +2023,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 54
+    weight: 55
     region: main
   field_identifier_url:
     type: link
@@ -2026,7 +2063,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 15
+    weight: 16
     region: main
   field_image2:
     type: responsive_image
@@ -2046,7 +2083,7 @@ content:
             lbw-cl: ''
             lbw-at: ''
             lb-col: false
-            ow: false
+            ow: true
             ow-el: ''
             ow-cl: ''
             ow-at: ''
@@ -2064,7 +2101,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 4
+    weight: 5
     region: main
   field_item_type:
     type: entity_reference_label
@@ -2159,7 +2196,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 38
+    weight: 39
     region: main
   field_local_origin_tid:
     type: entity_reference_label
@@ -2195,7 +2232,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 53
+    weight: 54
     region: main
   field_maker_attribution:
     type: advanced_text
@@ -2254,7 +2291,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 37
+    weight: 38
     region: main
   field_maker_name:
     type: string
@@ -2290,7 +2327,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 33
+    weight: 34
     region: main
   field_maker_role:
     type: entity_reference_label
@@ -2327,7 +2364,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 34
+    weight: 35
     region: main
   field_media_audio_video_docs_:
     type: entity_reference_entity_view
@@ -2365,7 +2402,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 52
+    weight: 53
     region: main
   field_nation_rationale:
     type: smart_trim
@@ -2414,7 +2451,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 36
+    weight: 37
     region: main
   field_nation_tid:
     type: entity_reference_label
@@ -2451,7 +2488,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 35
+    weight: 36
     region: main
   field_original_function:
     type: advanced_text
@@ -2510,7 +2547,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 40
+    weight: 41
     region: main
   field_provenance:
     type: advanced_text
@@ -2569,7 +2606,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 41
+    weight: 42
     region: main
   field_publication_history:
     type: advanced_text
@@ -2628,7 +2665,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 42
+    weight: 43
     region: main
   field_record_creation:
     type: advanced_text
@@ -2687,7 +2724,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 43
+    weight: 44
     region: main
   field_record_creation_notes:
     type: advanced_text
@@ -2746,7 +2783,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 44
+    weight: 45
     region: main
   field_region_origin_attribution:
     type: advanced_text
@@ -2805,7 +2842,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 45
+    weight: 46
     region: main
   field_related_extern_lang_items:
     type: link
@@ -2846,7 +2883,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 49
+    weight: 50
     region: main
   field_related_heritage_item:
     type: entity_reference_label
@@ -2883,7 +2920,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 46
+    weight: 47
     region: main
   field_related_heritage_out_gks:
     type: link
@@ -2924,7 +2961,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 47
+    weight: 48
     region: main
   field_related_language_item:
     type: entity_reference_label
@@ -2961,7 +2998,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 48
+    weight: 49
     region: main
   field_related_seasonal_time:
     type: entity_reference_label
@@ -2997,7 +3034,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 23
+    weight: 24
     region: main
   field_source_coll_his:
     type: advanced_text
@@ -3056,7 +3093,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 18
+    weight: 19
     region: main
   field_sources_exhib_pub_his:
     type: advanced_text
@@ -3115,7 +3152,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 50
+    weight: 51
     region: main
   field_tk_label:
     type: entity_reference_entity_view
@@ -3153,7 +3190,7 @@ content:
             fi-def-at: false
             prefix: ''
             suffix: ''
-    weight: 8
+    weight: 9
     region: main
   links:
     settings: {  }
