--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "vardot/varbase-updater": "~2.0",
         "webflo/drupal-finder": "~1.0",
         "drupal/scroll_top_button": "^2.0",
-        "drupal/views_display_switch": "^1.1"
+        "drupal/views_display_switch": "^1.1",
+        "drupal/display_field_copy": "^2.0"
     },
     "conflict": {
         "drupal/drupal": "*"
