--- a/config/default/user.role.full_member.yml
+++ b/config/default/user.role.full_member.yml
@@ -29,6 +29,7 @@ dependencies:
     - taxonomy.vocabulary.languages
     - taxonomy.vocabulary.local_origin
     - taxonomy.vocabulary.nations
+    - taxonomy.vocabulary.part_of_speech
     - taxonomy.vocabulary.regions
     - taxonomy.vocabulary.seasonal_time
     - taxonomy.vocabulary.tags
@@ -49,8 +50,6 @@ dependencies:
     - field_permissions
     - file
     - filter
-    - google_analytics_reports
-    - layout_builder
     - media
     - media_bulk_upload
     - menu_link_content
@@ -82,7 +81,6 @@ permissions:
   - 'Flush twig cache from admin toolbar'
   - 'Flush views cache from admin toolbar'
   - 'Rebuild theme registry from admin toolbar'
-  - 'access administration pages'
   - 'access all views'
   - 'access comments'
   - 'access content'
@@ -93,7 +91,6 @@ permissions:
   - 'access editor_multiple_media_browser entity browser pages'
   - 'access entity usage statistics'
   - 'access files overview'
-  - 'access google analytics reports'
   - 'access image_browser entity browser pages'
   - 'access media browser'
   - 'access media overview'
@@ -105,8 +102,6 @@ permissions:
   - 'access relations'
   - 'access responsive preview'
   - 'access shortcuts'
-  - 'access site in maintenance mode'
-  - 'access site reports'
   - 'access site-wide contact form'
   - 'access taxonomy overview'
   - 'access toolbar'
@@ -117,7 +112,6 @@ permissions:
   - 'access webform submission user'
   - 'administer related items'
   - 'administer user expire settings'
-  - 'create and edit custom blocks'
   - 'create article content'
   - 'create audio media'
   - 'create content translations'
@@ -243,9 +237,6 @@ permissions:
   - 'rabbit hole bypass node'
   - 'rabbit hole bypass taxonomy_term'
   - 'revert revisions'
-  - 'schedule publishing of media'
-  - 'schedule publishing of nodes'
-  - 'schedule publishing of taxonomy_term'
   - 'search all content'
   - 'search heritage_item content'
   - 'search language_item content'
@@ -275,6 +266,7 @@ permissions:
   - 'translate menu_link_content'
   - 'translate nations taxonomy_term'
   - 'translate page node'
+  - 'translate part_of_speech taxonomy_term'
   - 'translate project node'
   - 'translate regions taxonomy_term'
   - 'translate remote_video media'
@@ -283,7 +275,6 @@ permissions:
   - 'translate traditional_knowledge_tk_labels taxonomy_term'
   - 'translate video media'
   - 'update any basic block content'
-  - 'update any media'
   - 'update any varbase_html_code_block block content'
   - 'update any varbase_rich_text_block block content'
   - 'update content translations'
@@ -326,6 +317,7 @@ permissions:
   - 'view latest version'
   - 'view own field_gks_id'
   - 'view own field_make_role'
+  - 'view own field_record_editable_by'
   - 'view own files'
   - 'view own private files'
   - 'view own unpublished content'
