--- a/config/default/user.role.site_admin.yml
+++ b/config/default/user.role.site_admin.yml
@@ -32,6 +32,7 @@ dependencies:
     - taxonomy.vocabulary.languages
     - taxonomy.vocabulary.local_origin
     - taxonomy.vocabulary.nations
+    - taxonomy.vocabulary.part_of_speech
     - taxonomy.vocabulary.regions
     - taxonomy.vocabulary.seasonal_time
     - taxonomy.vocabulary.tags
@@ -94,7 +95,6 @@ dependencies:
     - scheduler
     - script_manager
     - search_api_tracking
-    - section_library
     - shortcut
     - simple_sitemap
     - styleguide
@@ -365,6 +365,7 @@ permissions:
   - 'edit terms in languages'
   - 'edit terms in local_origin'
   - 'edit terms in nations'
+  - 'edit terms in part_of_speech'
   - 'edit terms in regions'
   - 'edit terms in seasonal_time'
   - 'edit terms in tags'
@@ -439,6 +440,7 @@ permissions:
   - 'translate nations taxonomy_term'
   - 'translate page node'
   - 'translate paragraph'
+  - 'translate part_of_speech taxonomy_term'
   - 'translate project node'
   - 'translate regions taxonomy_term'
   - 'translate remote_video media'
@@ -497,6 +499,7 @@ permissions:
   - 'view latest version'
   - 'view media'
   - 'view own field_gks_id'
+  - 'view own field_record_editable_by'
   - 'view own unpublished content'
   - 'view own unpublished media'
   - 'view page revisions'
@@ -506,7 +509,6 @@ permissions:
   - 'view scheduled content'
   - 'view scheduled media'
   - 'view scheduled taxonomy_term'
-  - 'view section library templates'
   - 'view style guides'
   - 'view term names in collection'
   - 'view term names in contributor_roles'
