--- a/config/default/user.role.test_role.yml
+++ b/config/default/user.role.test_role.yml
@@ -8,7 +8,6 @@ dependencies:
     - media.type.audio
     - media.type.document
     - media.type.file
-    - media.type.gallery
     - media.type.image
     - media.type.remote_video
     - media.type.video
@@ -29,6 +28,7 @@ dependencies:
     - taxonomy.vocabulary.languages
     - taxonomy.vocabulary.local_origin
     - taxonomy.vocabulary.nations
+    - taxonomy.vocabulary.part_of_speech
     - taxonomy.vocabulary.regions
     - taxonomy.vocabulary.seasonal_time
     - taxonomy.vocabulary.tags
@@ -49,7 +49,6 @@ dependencies:
     - field_permissions
     - file
     - filter
-    - google_analytics_reports
     - layout_builder
     - media
     - media_bulk_upload
@@ -83,7 +82,6 @@ permissions:
   - 'Flush twig cache from admin toolbar'
   - 'Flush views cache from admin toolbar'
   - 'Rebuild theme registry from admin toolbar'
-  - 'access administration pages'
   - 'access content overview'
   - 'access contextual links'
   - 'access editor_media_browser entity browser pages'
@@ -91,7 +89,6 @@ permissions:
   - 'access editor_multiple_media_browser entity browser pages'
   - 'access entity usage statistics'
   - 'access files overview'
-  - 'access google analytics reports'
   - 'access image_browser entity browser pages'
   - 'access media overview'
   - 'access media_browser entity browser pages'
@@ -101,8 +98,6 @@ permissions:
   - 'access paragraphs_library_items entity browser pages'
   - 'access responsive preview'
   - 'access shortcuts'
-  - 'access site in maintenance mode'
-  - 'access site reports'
   - 'access taxonomy overview'
   - 'access toolbar'
   - 'access user profiles'
@@ -138,7 +133,6 @@ permissions:
   - 'delete own audio media'
   - 'delete own document media'
   - 'delete own file media'
-  - 'delete own gallery media'
   - 'delete own heritage_item content'
   - 'delete own image media'
   - 'delete own language_item content'
@@ -201,6 +195,7 @@ permissions:
   - 'translate menu_link_content'
   - 'translate nations taxonomy_term'
   - 'translate page node'
+  - 'translate part_of_speech taxonomy_term'
   - 'translate project node'
   - 'translate regions taxonomy_term'
   - 'translate remote_video media'
@@ -241,6 +236,7 @@ permissions:
   - 'view language_item revisions'
   - 'view latest version'
   - 'view own field_gks_id'
+  - 'view own field_record_editable_by'
   - 'view own unpublished content'
   - 'view own unpublished media'
   - 'view page revisions'
