--- a/config/default/workflows.workflow.varbase_editorial_workflow.yml
+++ b/config/default/workflows.workflow.varbase_editorial_workflow.yml
@@ -2,6 +2,16 @@ uuid: f4f17745-c0c1-4ac7-8178-a3f3ad27b781
 langcode: en
 status: true
 dependencies:
+  config:
+    - node.type.article
+    - node.type.heritage_item
+    - node.type.landing_page_lb
+    - node.type.language_item
+    - node.type.page
+    - node.type.project
+    - node.type.resource
+    - node.type.secure_page
+    - node.type.varbase_heroslider_media
   module:
     - content_moderation
 _core:
@@ -12,32 +22,32 @@ type: content_moderation
 type_settings:
   states:
     archived:
-      published: false
-      default_revision: true
       label: 'Archived / Unpublished'
       weight: 0
-    draft:
       published: false
-      default_revision: false
+      default_revision: true
+    draft:
       label: Draft
       weight: -3
-    published:
-      label: Published
-      published: true
-      default_revision: true
-      weight: -1
-    review:
       published: false
       default_revision: false
+    published:
+      label: Published
+      weight: -1
+      published: true
+      default_revision: true
+    review:
       label: 'In review'
       weight: -2
+      published: false
+      default_revision: false
   transitions:
     archive:
       label: 'Archive / Unpublish'
-      to: archived
-      weight: 1
       from:
         - published
+      to: archived
+      weight: 1
     archived_published:
       label: 'Restore from archive'
       from:
@@ -46,27 +56,37 @@ type_settings:
       weight: 2
     create_new_draft:
       label: 'Create new draft'
-      to: draft
-      weight: -3
       from:
         - archived
         - draft
         - review
         - published
+      to: draft
+      weight: -3
     publish:
       label: Publish
-      to: published
-      weight: -1
       from:
         - draft
         - review
         - published
+      to: published
+      weight: -1
     review:
       label: 'Send to review'
-      to: review
-      weight: -2
       from:
         - draft
         - review
+      to: review
+      weight: -2
+  entity_types:
+    node:
+      - article
+      - heritage_item
+      - landing_page_lb
+      - language_item
+      - page
+      - project
+      - resource
+      - secure_page
+      - varbase_heroslider_media
   default_moderation_state: draft
-  entity_types: {  }
