--- a/config/default/core.entity_form_display.node.article.default.yml
+++ b/config/default/core.entity_form_display.node.article.default.yml
@@ -9,7 +9,7 @@ dependencies:
     - field.field.node.article.field_sticky_on_top
     - field.field.node.article.field_tags
     - node.type.article
-    - workflows.workflow.varbase_simple_workflow
+    - workflows.workflow.varbase_editorial_workflow
   module:
     - content_moderation
     - length_indicator
