--- a/config/default/facets.facet.local_origin.yml
+++ b/config/default/facets.facet.local_origin.yml
@@ -37,18 +37,6 @@ only_visible_when_facet_source_is_visible: true
 show_only_one_result: true
 show_title: false
 processor_configs:
-  active_widget_order:
-    processor_id: active_widget_order
-    weights:
-      sort: 20
-    settings:
-      sort: DESC
-  count_widget_order:
-    processor_id: count_widget_order
-    weights:
-      sort: 30
-    settings:
-      sort: DESC
   display_value_widget_order:
     processor_id: display_value_widget_order
     weights:
@@ -60,6 +48,12 @@ processor_configs:
     weights:
       build: 100
     settings: {  }
+  raw_value_widget_order:
+    processor_id: raw_value_widget_order
+    weights:
+      sort: 50
+    settings:
+      sort: ASC
   translate_entity:
     processor_id: translate_entity
     weights:
